# check-suite

./: .editorconfig  .gitlab-ci.yml  .release.sh  CHANGELOG.md  LICENSE  README.adoc  flake.nix  meson.build  meson_options.txt
include/: check_suite.h  meson.build
src/: libcheck_suite.version  meson.build  runner.c
tests/: example.c  meson.build  test-driver.sh
